docs/envoy/v1.13.0/_sources/api-v2/api/v2/core/health_check.proto.rst.txt
.. _envoy_api_file_envoy/api/v2/core/health_check.proto:

Health check
============

* Health checking :ref:`architecture overview <arch_overview_health_checking>`.
* If health checking is configured for a cluster, additional statistics are emitted. They are
  documented :ref:`here <config_cluster_manager_cluster_stats>`.

.. _envoy_api_msg_core.HealthCheck:

core.HealthCheck
----------------

`[core.HealthCheck proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/health_check.proto#L55>`_


.. code-block:: json

  {
    "timeout": "{...}",
    "interval": "{...}",
    "initial_jitter": "{...}",
    "interval_jitter": "{...}",
    "interval_jitter_percent": "...",
    "unhealthy_threshold": "{...}",
    "healthy_threshold": "{...}",
    "reuse_connection": "{...}",
    "http_health_check": "{...}",
    "tcp_health_check": "{...}",
    "grpc_health_check": "{...}",
    "custom_health_check": "{...}",
    "no_traffic_interval": "{...}",
    "unhealthy_interval": "{...}",
    "unhealthy_edge_interval": "{...}",
    "healthy_edge_interval": "{...}",
    "event_log_path": "...",
    "always_log_health_check_failures": "...",
    "tls_options": "{...}"
  }

.. _envoy_api_field_core.HealthCheck.timeout:

timeout
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_, *REQUIRED*) The time to wait for a health check response. If the timeout is reached the
  health check attempt will be considered a failure.
  
  
.. _envoy_api_field_core.HealthCheck.interval:

interval
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_, *REQUIRED*) The interval between health checks.
  
  
.. _envoy_api_field_core.HealthCheck.initial_jitter:

initial_jitter
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) An optional jitter amount in milliseconds. If specified, Envoy will start health
  checking after for a random time in ms between 0 and initial_jitter. This only
  applies to the first health check.
  
  
.. _envoy_api_field_core.HealthCheck.interval_jitter:

interval_jitter
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) An optional jitter amount in milliseconds. If specified, during every
  interval Envoy will add interval_jitter to the wait time.
  
  
.. _envoy_api_field_core.HealthCheck.interval_jitter_percent:

interval_jitter_percent
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) An optional jitter amount as a percentage of interval_ms. If specified,
  during every interval Envoy will add interval_ms *
  interval_jitter_percent / 100 to the wait time.
  
  If interval_jitter_ms and interval_jitter_percent are both set, both of
  them will be used to increase the wait time.
  
  
.. _envoy_api_field_core.HealthCheck.unhealthy_threshold:

unhealthy_threshold
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_, *REQUIRED*) The number of unhealthy health checks required before a host is marked
  unhealthy. Note that for *http* health checking if a host responds with 503
  this threshold is ignored and the host is considered unhealthy immediately.
  
  
.. _envoy_api_field_core.HealthCheck.healthy_threshold:

healthy_threshold
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_, *REQUIRED*) The number of healthy health checks required before a host is marked
  healthy. Note that during startup, only a single successful health check is
  required to mark a host healthy.
  
  

.. _envoy_api_field_core.HealthCheck.reuse_connection:

reuse_connection
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Reuse health check connection between health checks. Default is true.
  
  
.. _envoy_api_field_core.HealthCheck.http_health_check:

http_health_check
  (:ref:`core.HealthCheck.HttpHealthCheck <envoy_api_msg_core.HealthCheck.HttpHealthCheck>`) HTTP health check.
  
  
  
  Precisely one of :ref:`http_health_check <envoy_api_field_core.HealthCheck.http_health_check>`, :ref:`tcp_health_check <envoy_api_field_core.HealthCheck.tcp_health_check>`, :ref:`grpc_health_check <envoy_api_field_core.HealthCheck.grpc_health_check>`, :ref:`custom_health_check <envoy_api_field_core.HealthCheck.custom_health_check>` must be set.
  
.. _envoy_api_field_core.HealthCheck.tcp_health_check:

tcp_health_check
  (:ref:`core.HealthCheck.TcpHealthCheck <envoy_api_msg_core.HealthCheck.TcpHealthCheck>`) TCP health check.
  
  
  
  Precisely one of :ref:`http_health_check <envoy_api_field_core.HealthCheck.http_health_check>`, :ref:`tcp_health_check <envoy_api_field_core.HealthCheck.tcp_health_check>`, :ref:`grpc_health_check <envoy_api_field_core.HealthCheck.grpc_health_check>`, :ref:`custom_health_check <envoy_api_field_core.HealthCheck.custom_health_check>` must be set.
  
.. _envoy_api_field_core.HealthCheck.grpc_health_check:

grpc_health_check
  (:ref:`core.HealthCheck.GrpcHealthCheck <envoy_api_msg_core.HealthCheck.GrpcHealthCheck>`) gRPC health check.
  
  
  
  Precisely one of :ref:`http_health_check <envoy_api_field_core.HealthCheck.http_health_check>`, :ref:`tcp_health_check <envoy_api_field_core.HealthCheck.tcp_health_check>`, :ref:`grpc_health_check <envoy_api_field_core.HealthCheck.grpc_health_check>`, :ref:`custom_health_check <envoy_api_field_core.HealthCheck.custom_health_check>` must be set.
  
.. _envoy_api_field_core.HealthCheck.custom_health_check:

custom_health_check
  (:ref:`core.HealthCheck.CustomHealthCheck <envoy_api_msg_core.HealthCheck.CustomHealthCheck>`) Custom health check.
  
  
  
  Precisely one of :ref:`http_health_check <envoy_api_field_core.HealthCheck.http_health_check>`, :ref:`tcp_health_check <envoy_api_field_core.HealthCheck.tcp_health_check>`, :ref:`grpc_health_check <envoy_api_field_core.HealthCheck.grpc_health_check>`, :ref:`custom_health_check <envoy_api_field_core.HealthCheck.custom_health_check>` must be set.
  
.. _envoy_api_field_core.HealthCheck.no_traffic_interval:

no_traffic_interval
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The "no traffic interval" is a special health check interval that is used when a cluster has
  never had traffic routed to it. This lower interval allows cluster information to be kept up to
  date, without sending a potentially large amount of active health checking traffic for no
  reason. Once a cluster has been used for traffic routing, Envoy will shift back to using the
  standard health check interval that is defined. Note that this interval takes precedence over
  any other.
  
  The default value for "no traffic interval" is 60 seconds.
  
  
.. _envoy_api_field_core.HealthCheck.unhealthy_interval:

unhealthy_interval
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The "unhealthy interval" is a health check interval that is used for hosts that are marked as
  unhealthy. As soon as the host is marked as healthy, Envoy will shift back to using the
  standard health check interval that is defined.
  
  The default value for "unhealthy interval" is the same as "interval".
  
  
.. _envoy_api_field_core.HealthCheck.unhealthy_edge_interval:

unhealthy_edge_interval
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The "unhealthy edge interval" is a special health check interval that is used for the first
  health check right after a host is marked as unhealthy. For subsequent health checks
  Envoy will shift back to using either "unhealthy interval" if present or the standard health
  check interval that is defined.
  
  The default value for "unhealthy edge interval" is the same as "unhealthy interval".
  
  
.. _envoy_api_field_core.HealthCheck.healthy_edge_interval:

healthy_edge_interval
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The "healthy edge interval" is a special health check interval that is used for the first
  health check right after a host is marked as healthy. For subsequent health checks
  Envoy will shift back to using the standard health check interval that is defined.
  
  The default value for "healthy edge interval" is the same as the default interval.
  
  
.. _envoy_api_field_core.HealthCheck.event_log_path:

event_log_path
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Specifies the path to the :ref:`health check event log <arch_overview_health_check_logging>`.
  If empty, no event log will be written.
  
  
.. _envoy_api_field_core.HealthCheck.always_log_health_check_failures:

always_log_health_check_failures
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set to true, health check failure events will always be logged. If set to false, only the
  initial health check failure event will be logged.
  The default value is false.
  
  
.. _envoy_api_field_core.HealthCheck.tls_options:

tls_options
  (:ref:`core.HealthCheck.TlsOptions <envoy_api_msg_core.HealthCheck.TlsOptions>`) This allows overriding the cluster TLS settings, just for health check connections.
  
  
.. _envoy_api_msg_core.HealthCheck.Payload:

core.HealthCheck.Payload
------------------------

`[core.HealthCheck.Payload proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/health_check.proto#L57>`_

Describes the encoding of the payload bytes in the payload.

.. code-block:: json

  {
    "text": "..."
  }

.. _envoy_api_field_core.HealthCheck.Payload.text:

text
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) Hex encoded payload. E.g., "000000FF".
  
  
  



.. _envoy_api_msg_core.HealthCheck.HttpHealthCheck:

core.HealthCheck.HttpHealthCheck
--------------------------------

`[core.HealthCheck.HttpHealthCheck proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/health_check.proto#L70>`_


.. code-block:: json

  {
    "host": "...",
    "path": "...",
    "service_name": "...",
    "request_headers_to_add": [],
    "request_headers_to_remove": [],
    "use_http2": "...",
    "expected_statuses": [],
    "codec_client_type": "...",
    "service_name_matcher": "{...}"
  }

.. _envoy_api_field_core.HealthCheck.HttpHealthCheck.host:

host
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The value of the host header in the HTTP health check request. If
  left empty (default value), the name of the cluster this health check is associated
  with will be used.
  
  
.. _envoy_api_field_core.HealthCheck.HttpHealthCheck.path:

path
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) Specifies the HTTP path that will be requested during health checking. For example
  */healthcheck*.
  
  


.. _envoy_api_field_core.HealthCheck.HttpHealthCheck.service_name:

service_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) An optional service name parameter which is used to validate the identity of
  the health checked cluster. See the :ref:`architecture overview
  <arch_overview_health_checking_identity>` for more information.
  
  .. attention::
  
    This field has been deprecated in favor of `service_name_matcher` for better flexibility
    over matching with service-cluster name.
  
  
.. _envoy_api_field_core.HealthCheck.HttpHealthCheck.request_headers_to_add:

request_headers_to_add
  (:ref:`core.HeaderValueOption <envoy_api_msg_core.HeaderValueOption>`) Specifies a list of HTTP headers that should be added to each request that is sent to the
  health checked cluster. For more information, including details on header value syntax, see
  the documentation on :ref:`custom request headers
  <config_http_conn_man_headers_custom_request_headers>`.
  
  
.. _envoy_api_field_core.HealthCheck.HttpHealthCheck.request_headers_to_remove:

request_headers_to_remove
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Specifies a list of HTTP headers that should be removed from each request that is sent to the
  health checked cluster.
  
  
.. _envoy_api_field_core.HealthCheck.HttpHealthCheck.use_http2:

use_http2
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, health checks will be made using http/2.
  Deprecated, use :ref:`codec_client_type
  <envoy_api_field_core.HealthCheck.HttpHealthCheck.codec_client_type>` instead.
  
  
.. _envoy_api_field_core.HealthCheck.HttpHealthCheck.expected_statuses:

expected_statuses
  (:ref:`type.Int64Range <envoy_api_msg_type.Int64Range>`) Specifies a list of HTTP response statuses considered healthy. If provided, replaces default
  200-only policy - 200 must be included explicitly as needed. Ranges follow half-open
  semantics of :ref:`Int64Range <envoy_api_msg_type.Int64Range>`. The start and end of each
  range are required. Only statuses in the range [100, 600) are allowed.
  
  
.. _envoy_api_field_core.HealthCheck.HttpHealthCheck.codec_client_type:

codec_client_type
  (:ref:`type.CodecClientType <envoy_api_enum_type.CodecClientType>`) Use specified application protocol for health checks.
  
  
.. _envoy_api_field_core.HealthCheck.HttpHealthCheck.service_name_matcher:

service_name_matcher
  (:ref:`type.matcher.StringMatcher <envoy_api_msg_type.matcher.StringMatcher>`) An optional service name parameter which is used to validate the identity of
  the health checked cluster using a :ref:`StringMatcher
  <envoy_api_msg_type.matcher.StringMatcher>`. See the :ref:`architecture overview
  <arch_overview_health_checking_identity>` for more information.
  
  


.. _envoy_api_msg_core.HealthCheck.TcpHealthCheck:

core.HealthCheck.TcpHealthCheck
-------------------------------

`[core.HealthCheck.TcpHealthCheck proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/health_check.proto#L128>`_


.. code-block:: json

  {
    "send": "{...}",
    "receive": []
  }

.. _envoy_api_field_core.HealthCheck.TcpHealthCheck.send:

send
  (:ref:`core.HealthCheck.Payload <envoy_api_msg_core.HealthCheck.Payload>`) Empty payloads imply a connect-only health check.
  
  
.. _envoy_api_field_core.HealthCheck.TcpHealthCheck.receive:

receive
  (:ref:`core.HealthCheck.Payload <envoy_api_msg_core.HealthCheck.Payload>`) When checking the response, “fuzzy” matching is performed such that each
  binary block must be found, and in the order specified, but not
  necessarily contiguous.
  
  


.. _envoy_api_msg_core.HealthCheck.RedisHealthCheck:

core.HealthCheck.RedisHealthCheck
---------------------------------

`[core.HealthCheck.RedisHealthCheck proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/health_check.proto#L138>`_


.. code-block:: json

  {
    "key": "..."
  }

.. _envoy_api_field_core.HealthCheck.RedisHealthCheck.key:

key
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, optionally perform ``EXISTS <key>`` instead of ``PING``. A return value
  from Redis of 0 (does not exist) is considered a passing healthcheck. A return value other
  than 0 is considered a failure. This allows the user to mark a Redis instance for maintenance
  by setting the specified key to any value and waiting for traffic to drain.
  
  


.. _envoy_api_msg_core.HealthCheck.GrpcHealthCheck:

core.HealthCheck.GrpcHealthCheck
--------------------------------

`[core.HealthCheck.GrpcHealthCheck proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/health_check.proto#L150>`_

`grpc.health.v1.Health
<https://github.com/grpc/grpc/blob/master/src/proto/grpc/health/v1/health.proto>`_-based
healthcheck. See `gRPC doc <https://github.com/grpc/grpc/blob/master/doc/health-checking.md>`_
for details.

.. code-block:: json

  {
    "service_name": "...",
    "authority": "..."
  }

.. _envoy_api_field_core.HealthCheck.GrpcHealthCheck.service_name:

service_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) An optional service name parameter which will be sent to gRPC service in
  `grpc.health.v1.HealthCheckRequest
  <https://github.com/grpc/grpc/blob/master/src/proto/grpc/health/v1/health.proto#L20>`_.
  message. See `gRPC health-checking overview
  <https://github.com/grpc/grpc/blob/master/doc/health-checking.md>`_ for more information.
  
  
.. _envoy_api_field_core.HealthCheck.GrpcHealthCheck.authority:

authority
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The value of the :authority header in the gRPC health check request. If
  left empty (default value), the name of the cluster this health check is associated
  with will be used.
  
  


.. _envoy_api_msg_core.HealthCheck.CustomHealthCheck:

core.HealthCheck.CustomHealthCheck
----------------------------------

`[core.HealthCheck.CustomHealthCheck proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/health_check.proto#L165>`_

Custom health check.

.. code-block:: json

  {
    "name": "...",
    "config": "{...}",
    "typed_config": "{...}"
  }

.. _envoy_api_field_core.HealthCheck.CustomHealthCheck.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The registered name of the custom health checker.
  
  
.. _envoy_api_field_core.HealthCheck.CustomHealthCheck.config:

config
  (`Struct <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#struct>`_) 
  A custom health checker specific configuration which depends on the custom health checker
  being instantiated. See :api:`envoy/config/health_checker` for reference.
  
  
  Only one of :ref:`config <envoy_api_field_core.HealthCheck.CustomHealthCheck.config>`, :ref:`typed_config <envoy_api_field_core.HealthCheck.CustomHealthCheck.typed_config>` may be set.
  
.. _envoy_api_field_core.HealthCheck.CustomHealthCheck.typed_config:

typed_config
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) 
  A custom health checker specific configuration which depends on the custom health checker
  being instantiated. See :api:`envoy/config/health_checker` for reference.
  
  
  Only one of :ref:`config <envoy_api_field_core.HealthCheck.CustomHealthCheck.config>`, :ref:`typed_config <envoy_api_field_core.HealthCheck.CustomHealthCheck.typed_config>` may be set.
  


.. _envoy_api_msg_core.HealthCheck.TlsOptions:

core.HealthCheck.TlsOptions
---------------------------

`[core.HealthCheck.TlsOptions proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/health_check.proto#L182>`_

Health checks occur over the transport socket specified for the cluster. This implies that if a
cluster is using a TLS-enabled transport socket, the health check will also occur over TLS.

This allows overriding the cluster TLS settings, just for health check connections.

.. code-block:: json

  {
    "alpn_protocols": []
  }

.. _envoy_api_field_core.HealthCheck.TlsOptions.alpn_protocols:

alpn_protocols
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Specifies the ALPN protocols for health check connections. This is useful if the
  corresponding upstream is using ALPN-based :ref:`FilterChainMatch
  <envoy_api_msg_listener.FilterChainMatch>` along with different protocols for health checks
  versus data connections. If empty, no ALPN protocols will be set on health check connections.
  
  


.. _envoy_api_enum_core.HealthStatus:

Enum core.HealthStatus
----------------------

`[core.HealthStatus proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/health_check.proto#L29>`_

Endpoint health status.

.. _envoy_api_enum_value_core.HealthStatus.UNKNOWN:

UNKNOWN
  *(DEFAULT)* ⁣The health status is not known. This is interpreted by Envoy as *HEALTHY*.
  
  
.. _envoy_api_enum_value_core.HealthStatus.HEALTHY:

HEALTHY
  ⁣Healthy.
  
  
.. _envoy_api_enum_value_core.HealthStatus.UNHEALTHY:

UNHEALTHY
  ⁣Unhealthy.
  
  
.. _envoy_api_enum_value_core.HealthStatus.DRAINING:

DRAINING
  ⁣Connection draining in progress. E.g.,
  `<https://aws.amazon.com/blogs/aws/elb-connection-draining-remove-instances-from-service-with-care/>`_
  or
  `<https://cloud.google.com/compute/docs/load-balancing/enabling-connection-draining>`_.
  This is interpreted by Envoy as *UNHEALTHY*.
  
  
.. _envoy_api_enum_value_core.HealthStatus.TIMEOUT:

TIMEOUT
  ⁣Health check timed out. This is part of HDS and is interpreted by Envoy as
  *UNHEALTHY*.
  
  
.. _envoy_api_enum_value_core.HealthStatus.DEGRADED:

DEGRADED
  ⁣Degraded.
  
  
